--- a/app/views/families/_card_m.html.haml
+++ b/app/views/families/_card_m.html.haml
@@ -1,8 +1,8 @@
 %div.well.well-small
   %table{width: "100%"}
     %tr
-      %td.col-md-2{rowspan: "2"}
-        =link_to image_tag(gravatar_for(user)), user_path(user)
+      %td.col-md-1{rowspan: "2"}
+        =link_to image_tag(gravatar_for(user, 40)), user_path(user)
       %td
         .lead
           .pull-right
