--- a/app/views/families/_edit.html.haml
+++ b/app/views/families/_edit.html.haml
@@ -1,3 +1,3 @@
 .modal-header
-  %h3= t('views.editing_family', user: @family.name)
+  %h3= t('views.editing_family', family: @family.name)
 = render "form"
