--- a/app/views/families/show_m.html.haml
+++ b/app/views/families/show_m.html.haml
@@ -1,12 +1,12 @@
 %div{align: "center"}
   %table.table
     %tr
-      %td.col-md-2{rowspan: "2"}
-        = image_tag(gravatar_for(@family))
+      %td.col-md-1{rowspan: "2"}
+        = image_tag(gravatar_for(@family, 40))
       %td
         .lead
           .pull-right
-            = link_to " #{t('views.link')}", @access_url, class: "glyphicon glyphicon-new-window btn btn-default"
+            = link_to "", @access_url, class: "glyphicon glyphicon-new-window btn btn-default"
             -if current_user.parent?
               = link_to " #{t('views.member')}", new_user_path, remote: true, class: 'glyphicon glyphicon-plus btn btn-default'
               = link_to " ", edit_family_path(@family), remote: true, class: 'glyphicon glyphicon-edit btn btn-default'
@@ -15,6 +15,6 @@
       %td
 
 -@family.users.each do |user|
-  =render partial: 'card', locals: { user: user }
+  =render partial: 'card_m', locals: { user: user }
 
 = render partial: 'users/tasks', locals: { family: @family, user: nil, tasks: @family.tasks, section: t('views.tasks') }
