--- a/app/views/users/_tasks.html.haml
+++ b/app/views/users/_tasks.html.haml
@@ -1,19 +1,25 @@
 %div.well.well-small
   -if current_user.parent?
-    .pull-right= link_to " #{t('views.task')}", new_task_path, class: "glyphicon glyphicon-plus btn btn-default"
-
+    -if user
+      .pull-right= link_to "", new_task_path(user_id: user.id), remote: true, class: "glyphicon glyphicon-plus btn btn-default"
+    -else
+      .pull-right= link_to "", new_task_path(family_id: family.id), remote: true, class: "glyphicon glyphicon-plus btn btn-default"
   %h4= section
   -if tasks.any?
     %table.table
       -tasks.each do |task|
         %tr
           %td
-            .span5
-              = link_to task.title, task
-            .span1{ id: "task-#{task.id}" }
-              -if Completion.find_by_user_id_and_task_id_and_completed(@user.id, task.id, @time)
-                = link_to '', '#', class: "i icon-ok btn btn-success"
+            .pull-right{id: "task-#{task.id}"}
+              -if Completion.find_by_task_id(task.id)
+                %btn.btn.btn-sm.btn-success.glyphicon.glyphicon-check
               -else
-                = link_to '', complete_task_path(task: task.id, user: @user.id, task_ids: tasks.collect(&:id)), class: "i icon-ok btn", remote: true
+                = link_to '', complete_task_path(task: task.id), class: "glyphicon glyphicon-unchecked btn btn-sm btn-default", remote: true
+            - if task.points
+              .lead.label.label-success= task.points
+            = link_to task.title, edit_task_path(task), remote: true
+            -unless task.description.blank?
+              %p
+                %em= task.description
   -else
     %em= t('views.no_tasks')
