--- a/app/views/families/_card_m.html.haml
+++ b/app/views/families/_card_m.html.haml
@@ -2,7 +2,7 @@
   %table{width: "100%"}
     %tr
       %td.col-md-1{rowspan: "2"}
-        =link_to image_tag(gravatar_for(user, 40)), user_path(user)
+        =link_to image_tag(gravatar_for(user, 40), class: "img-rounded"), user_path(user)
       %td
         .lead
           .pull-right
@@ -17,3 +17,7 @@
         .pull-right
           -if current_user.parent?
             =link_to "", multi_users_path(id: user.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default"
+        - progress = user.task_progress
+        %div{style: "margin-right:60px;"}
+          .progress
+            .progress-bar{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "#{progress}", :role => "progressbar", :style => "width: #{progress}%;"}
