adding instagram setup

--- a/app/views/events/create.js.erb
+++ b/app/views/events/create.js.erb
@@ -1,14 +1,13 @@
 var el = $('.errors');
 
-<% if @user.errors.any? %>
-
+<% if @event.errors.any? %>
+  
   // Create a list of errors
   var errors = $('<ul />');
 
-  <% @user.errors.full_messages.each do |error| %>
+  <% @event.errors.full_messages.each do |error| %>
     errors.append("<li><%= escape_javascript( error ) %></li>");
   <% end %>
-  
   // Display errors on form
   el.html(errors);
   el.addClass('alert alert-danger');
