--- a/app/views/events/update.js.erb
+++ b/app/views/events/update.js.erb
@@ -1,11 +1,11 @@
 var el = $('.errors');
 
-<% if @user.errors.any? %>
+<% if @event.errors.any? %>
 
   // Create a list of errors
   var errors = $('<ul />');
 
-  <% @user.errors.full_messages.each do |error| %>
+  <% @event.errors.full_messages.each do |error| %>
     errors.append("<li><%= escape_javascript( error ) %></li>");
   <% end %>
   
