--- a/app/views/families/_card_m.html.haml
+++ b/app/views/families/_card_m.html.haml
@@ -1,7 +1,7 @@
 %div.well.well-small
   %table{width: "100%"}
     %tr
-      %td.col-md-1{rowspan: "2"}
+      %td.col-sm-1{rowspan: "2"}
         =link_to image_tag(gravatar_for(user, 40), class: "img-rounded"), user_path(user)
       %td
         .lead
@@ -17,7 +17,7 @@
         .pull-right
           -if current_user.parent?
             =link_to "", multi_users_path(id: user.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default"
-        - progress = user.task_progress
+        - progress = (user.task_progress < 1 ? 10 : user.task_progress)
         %div{style: "margin-right:60px;"}
           .progress
             .progress-bar{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "#{progress}", :role => "progressbar", :style => "width: #{progress}%;"}
