--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -14,6 +14,6 @@ var el = $('.errors');
 
 <% else %>
 
-  window.location.replace("<%= user_path(@user) %>");
+  location.reload(true);
     
 <% end %>
