--- a/app/views/users/show_m.html.haml
+++ b/app/views/users/show_m.html.haml
@@ -20,7 +20,7 @@
             %table
               -@user.social_medium.each do |feed|
                 %tr
-                  %td= link_to MediaFeed::TYPE_NAME[feed.feed_type], user_media_feed_path(@user, feed)
+                  %td= link_to SocialMedia::TYPE_NAME[feed.feed_type], user_social_medium_path(@user, feed)
         = t('views.social_media')
 
 = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
