instagram feed viewable

--- a/app/views/users/_social_medium.html.haml
+++ b/app/views/users/_social_medium.html.haml
@@ -1,7 +1,7 @@
 %table.table
   %tr
     %td
-      = image_tag("ig-badge-48.png")
+      = image_tag("instagram.png")
     %td
       .pull-right
         -if @user.instagram?
