--- a/app/views/social_medium/_instagram.html.haml
+++ b/app/views/social_medium/_instagram.html.haml
@@ -6,23 +6,23 @@
     = " ( #{@feed.username} )"
 - if @results.any?
   - @results.each do |post|
-    .well.well-small
-      .panel.panel-default
-        .panel-heading
-          %h3.panel-title
-            .pull-right
-              %span.glyphicon.glyphicon-heart
-              =post.likes[:count]
-            = Time.at(post.created_time.to_i).strftime("%B %d, %Y")
-        .panel-body
-          = image_tag(post.images.low_resolution.url)
-        = post.caption.text
+    .panel.panel-default
+      .panel-heading
+        %h3.panel-title
+          .pull-right
+            %span.glyphicon.glyphicon-heart
+            =post.likes[:count]
+          = Time.at(post.created_time.to_i).strftime("%B %d, %Y")
+      .panel-body
+        = image_tag(post.images.low_resolution.url)
+        %p= post.caption.text
         - post[:comments][:data].each do |comment|
-          .media
-            %a.pull-left{:href => "http://instagram.com/#{comment.from[:username]}"}
-              = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded media-object")
-            .media-body
-              %h4.media-heading=link_to comment.from[:username], "http://instagram.com/#{comment.from[:username]}"
-              = comment.text
+          %p
+            .media
+              %a.pull-left{:href => "http://instagram.com/#{comment.from[:username]}"}
+                = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded media-object")
+              .media-body
+                %h4.media-heading=link_to comment.from[:username], "http://instagram.com/#{comment.from[:username]}"
+                = comment.text
 -else
   No Results
