better instagram, close modal

--- a/app/views/social_medium/_show.html.haml
+++ b/app/views/social_medium/_show.html.haml
@@ -1,1 +1,2 @@
-= render "#{SocialMedia::TYPE_NAME[@feed.feed_type].downcase}"
+.modal-body
+  = render "#{SocialMedia::TYPE_NAME[@feed.feed_type].downcase}"
