--- a/app/views/social_medium/_instagram.html.haml
+++ b/app/views/social_medium/_instagram.html.haml
@@ -1,4 +1,5 @@
 .lead{align: "center"}
+  .pull-right= link_to "", "", class: "glyphicon glyphicon-remove", data: {dismiss: "modal"}
   %p= SocialMedia::TYPE_NAME[@feed.feed_type]
   .well.well-small
     = image_tag(@feed.picture, size: '40x40', class: "img-rounded")
@@ -17,12 +18,11 @@
         = image_tag(post.images.low_resolution.url)
         %p= post.caption.text
         - post[:comments][:data].each do |comment|
-          %p
-            .media
-              %a.pull-left{:href => "http://instagram.com/#{comment.from[:username]}"}
-                = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded media-object")
-              .media-body
-                %h4.media-heading=link_to comment.from[:username], "http://instagram.com/#{comment.from[:username]}"
-                = comment.text
+          .media
+            %a.pull-left{:href => "http://instagram.com/#{comment.from[:username]}"}
+              = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded media-object")
+            .media-body
+              %h4.media-heading=link_to comment.from[:username], "http://instagram.com/#{comment.from[:username]}"
+              = comment.text
 -else
   No Results
