--- a/app/views/users/show_m.html.haml
+++ b/app/views/users/show_m.html.haml
@@ -1,7 +1,7 @@
 %div{align: "center"}
   %table.table
     %tr
-      %td.col-md-1{rowspan: "2"}
+      %td.col-md-1
         = image_tag(gravatar_for(@user, 40), class: "img-rounded")
       %td
         .lead
@@ -13,12 +13,10 @@
                 = "#{@user.credits} #{t('views.credits')}"
           = @user.name
     %tr
-      %td
+      %td{colspan: "2"}
         -if @user.social_medium.any?
-          %table
-            -@user.social_medium.each do |feed|
-              %tr
-                %td= link_to image_tag("#{SocialMedia::TYPE_NAME[feed.feed_type].downcase}.png", size: "40x40"), user_social_medium_path(@user, feed), remote: true
+          -@user.social_medium.each do |feed|
+            = link_to image_tag("#{SocialMedia::TYPE_NAME[feed.feed_type].downcase}.png", size: "40x40"), user_social_medium_path(@user, feed), remote: true
 
 = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
 -if @user.family
