--- a/app/views/users/_social_medium.html.haml
+++ b/app/views/users/_social_medium.html.haml
@@ -1,11 +1,24 @@
-%table.table
-  %tr
-    %td
-      = image_tag("instagram.png")
-    %td
-      .pull-right
-        -if @user.instagram?
-          = link_to "", user_social_medium_path(@user, @user.instagram), class: "glyphicon glyphicon-play btn btn-success"
-        -else
-          = link_to "", connect_instagram_index_path, class: "glyphicon glyphicon-plus btn btn-default"
-      .lead= Instagram
+.well.well-small
+  %table{width: "100%"}
+    %tr
+      %td
+        = image_tag("instagram.png")
+      %td
+        .pull-right
+          -if @user.instagram?
+            = link_to "", user_social_medium_path(@user, @user.instagram), remote: true, class: "glyphicon glyphicon-play btn btn-success"
+          -else
+            = link_to "", connect_instagram_index_path, class: "glyphicon glyphicon-plus btn btn-default"
+        .lead Instagram
+.well.well-small
+  %table{width: "100%"}
+    %tr
+      %td
+        = image_tag("facebook.png")
+      %td
+        .pull-right
+          -if @user.facebook?
+            = link_to "", user_social_medium_path(@user, @user.facebook), remote: true, class: "glyphicon glyphicon-play btn btn-success"
+          -else
+            = link_to "", connect_facebook_index_path, class: "glyphicon glyphicon-plus btn btn-default"
+        .lead Facebook
