--- a/app/views/meals/_form.html.haml
+++ b/app/views/meals/_form.html.haml
@@ -1,24 +1,11 @@
-= form_for(@meal) do |f|
-  - if @meal.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@meal.errors.count, "error")
-        prohibited this meal from being saved:
-      %ul
-        - @meal.errors.full_messages.each do |msg|
-          %li= msg
-  %table.table
-    %tr
-      %td
-        .span3
-          = f.label :name
-        .span3
-          = f.text_field :name
-    %tr
-      %td
-        .span3
-          = f.label 'Info'
-        .span3
-          = f.text_area :description, rows: "3", maxlength: "255"
-  .actions{align: "right"}
-    = f.submit "Save", class: "btn btn-small btn-success"
+.modal-body
+  = bootstrap_form_for(@meal, layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-7", remote: true) do |f|
+    .errors
+    = f.hidden_field :family_id
+    = f.text_field :name
+    = f.text_area :description, rows: "3", maxlength: "255"
+
+    = f.submit t('views.save'),class: "btn btn-primary"
+    = link_to t('views.cancel'), "", class: "btn btn-default", data: {dismiss: "modal"}
+    -if params[:action] == "edit"
+      = link_to t('views.delete'), @meal, method: :delete, data: {confirm: t('views.are_you_sure')}, class: "btn btn-danger"
