--- a/app/views/social_medium/_instagram_m.html.haml
+++ b/app/views/social_medium/_instagram_m.html.haml
@@ -1,7 +1,7 @@
 .lead{align: "center"}
   .pull-right= link_to "", "", class: "glyphicon glyphicon-remove", data: {dismiss: "modal"}
   %p= SocialMedia::TYPE_NAME[@feed.feed_type]
-  .well.well-small
+  .well.well-sm
     %table{width: "100%"}
       %tr
         %td{rowspan: "2"}= image_tag(@feed.picture, size: '40x40', class: "img-rounded")
