--- a/app/views/users/_tasks.html.haml
+++ b/app/views/users/_tasks.html.haml
@@ -1,25 +1,24 @@
-%div.well.well-small
+%div.well.well-sm
   -if current_user.parent?
-    -if user
-      .pull-right= link_to "", new_task_path(user_id: user.id), remote: true, class: "glyphicon glyphicon-plus btn btn-default"
-    -else
+    -if family
       .pull-right= link_to "", new_task_path(family_id: family.id), remote: true, class: "glyphicon glyphicon-plus btn btn-default"
+    -else
+      .pull-right= link_to "", new_task_path(user_id: user.id), remote: true, class: "glyphicon glyphicon-plus btn btn-default"
   %h4= section
   -if tasks.any?
-    %table.table
-      -tasks.each do |task|
-        %tr
-          %td
-            .pull-right{id: "task-#{task.id}"}
-              -if task.completed?
-                %btn.btn.btn-sm.btn-success.glyphicon.glyphicon-check
-              -else
-                = link_to '', complete_task_path(task: task.id), class: "glyphicon glyphicon-unchecked btn btn-sm btn-default", remote: true
-            - if task.points
-              .lead.label.label-success= task.points
-            = link_to task.title, edit_task_path(task), remote: true
-            -unless task.description.blank?
-              %p
-                %em= task.description
+    -tasks.each do |task|
+      .panel.panel-default
+        .panel-heading
+          .pull-right{id: "task-#{task.id}"}
+            -if task.completed?
+              %btn.btn.btn-sm.btn-success.glyphicon.glyphicon-check
+            -else
+              = link_to '', complete_task_path(task: task.id, user: user.id), class: "glyphicon glyphicon-unchecked btn btn-sm btn-default", remote: true
+          - if task.points
+            .label.label-success= task.points
+          = link_to task.title, edit_task_path(task), remote: true
+        -unless task.description.blank?
+          .panel-body
+            %em= task.description
   -else
     %em= t('views.no_tasks')
