--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,9 +8,9 @@
           .pull-right
             -if @user.parent?
               .label.label-primary= t('views.parent')
-            -elsif @user.credits
+            -else
               .label.label-success{id: "credits"}
-                = "#{@user.credits} #{t('views.credits')}"
+                = "#{@user.credits || "0"} #{t('views.credits')}"
           = @user.name
     %tr
       %td
@@ -19,4 +19,4 @@
             = link_to image_tag("#{SocialMedia::TYPE_NAME[feed.feed_type].downcase}.png", size: "40x40"), user_social_medium_path(@user, feed), remote: true
 = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks, section: t('views.my_tasks') }
 -if @user.family
-  = render partial: 'tasks', locals: { family: @user.family, user: nil, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
+  = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
